# luchta

./: .gitattributes  .gitignore  .gitmodules  .mergify.yml  .tool-versions  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  knope.toml  renovate.json  rust-toolchain.toml
.changeset/: add-ast-grep-worker.md  add-bash-worker.md  add-build-cache.md  add-build-lock.md  add-extra-resolve-worker.md  add-list-subcommand.md  add-luchta-why-command.md  add-max-weight-override.md  add-no-cache-flag.md  add-oxc-transform-oxfmt-workers.md  add-oxlint-worker.md  add-swc-transform-worker.md  add-watch-mode.md  add-xtask-automation-crate.md  cache-nonce.md  cache-sharing.md  clamp-task-weight-to-max.md  cleaner-build-output.md  cli-package-targeting.md  compress-snapshot-metadata.md  conditional-tasks-script-pruning.md  console-output-improvements.md  cross-package-input-deps.md  document-reviewdog-integration.md  dry-run-and-graceful-shutdown.md  dry-run-hide-pruned.md  env-var-control.md  exclude-noop-tasks-from-stats.md  fix-concurrent-input-cache-race.md  fix-config-stdout-deadlock.md  fix-dropped-worker-logs.md  fix-release-windows-submodule.md  fix-swc-wasmer-windows.md  fix-windows-release-build.md  fix-worker-outdir-relative.md  fix-xpkg-input-path-collision.md  honor-ignore-patterns-in-oxfmt-oxlint.md  implicit-package-filter-from-cwd.md  improve-running-task-rendering.md  improve-watch-output.md  (+57 more)
.github/workflows/: ci.yml  patch-drift.yaml  release-prepare.yaml  release.yaml
crates/luchta-ast-grep-worker/: Cargo.toml
crates/luchta-ast-grep-worker/src/: config.rs  lint.rs  main.rs  sarif.rs
crates/luchta-ast-grep-worker/tests/: protocol.rs
crates/luchta-bash-worker/: Cargo.toml
crates/luchta-bash-worker/src/: main.rs
crates/luchta-bash-worker/tests/: protocol.rs
crates/luchta-cache/: Cargo.toml
crates/luchta-cache/src/: decide.rs  hashing.rs  lib.rs  reason.rs  record.rs  resolve.rs  serialization.rs  store.rs
crates/luchta-cache/src/shared/: atomicio.rs  blob.rs  gc.rs  git.rs  mod.rs  paths.rs  rclone.rs  remote.rs  scope.rs  snapshot.rs
crates/luchta-cache/src/shared/rclone/: async_job.rs  daemon.rs  mod.rs  transport.rs
crates/luchta-cli/: Cargo.toml
crates/luchta-cli/src/: build_lock.rs  cache_ctx.rs  cache_nonce.rs  cli.rs  config.rs  env_conflict.rs  env_merge.rs  format.rs  list.rs  logs.rs  main.rs  memory_pressure.rs  outcome.rs  progress.rs  progress_task_list.rs  rss.rs  run.rs  run_watch_tests.rs  since.rs  why.rs
crates/luchta-cli/src/progress/: progress_ansi_and_state_tests.rs  progress_render_progress_tests.rs  progress_summary_tests.rs  progress_task_group_tests.rs  progress_test_helpers.rs  progress_warnings_tests.rs
crates/luchta-cli/src/reports/: ctrf.rs  mod.rs
crates/luchta-cli/src/run/: dispatch.rs  input_stability.rs  pause.rs  setup.rs
crates/luchta-cli/src/run/tests/: run_selection_matrix_tests.rs
crates/luchta-cli/src/watch/: driver.rs  driver_e2e_support.rs  driver_e2e_tests.rs  lockfile_watch.rs  mod.rs  registry.rs  session.rs  watcher.rs
crates/luchta-cli/tests/: build_lock_integration.rs  cache_cross_package_e2e.rs  cache_e2e.rs  cache_lockfile_e2e.rs  cache_nonce_e2e.rs  cache_persistence_e2e.rs  cache_sharing_e2e.rs  cache_skip_accounting.rs  cache_yarn_worker_e2e.rs  integration.rs  list_integration.rs  logs_integration.rs  max_weight.rs  memory_threshold.rs  no_cache_e2e.rs  output_mode_integration.rs  report_integration.rs  run_continue_and_fail_fast_integration.rs  run_failure_output_integration.rs  shared_cache_e2e.rs  since_integration.rs  why_integration.rs  worker_chain_integration.rs  worker_integration.rs  worker_resolve_inputs_regression.rs
crates/luchta-cli/tests/common/: mod.rs
crates/luchta-command-filter/: Cargo.toml
crates/luchta-command-filter/src/: main.rs
crates/luchta-command-filter/tests/: protocol.rs
crates/luchta-engine/: Cargo.toml
crates/luchta-engine/src/: executor.rs  input_expansion.rs  lib.rs  task_graph.rs  walker.rs
crates/luchta-engine/src/worker/: handle.rs  io_tasks.rs  manager.rs  mod.rs  protocol.rs  spawn.rs
crates/luchta-engine/src/worker/manager/: tests.rs
crates/luchta-extra-resolve-worker/: Cargo.toml
crates/luchta-extra-resolve-worker/src/: main.rs
crates/luchta-extra-resolve-worker/tests/: protocol.rs
crates/luchta-file-exists-filter/: Cargo.toml
crates/luchta-file-exists-filter/src/: main.rs
crates/luchta-file-exists-filter/tests/: protocol.rs
crates/luchta-lazy-worker/: Cargo.toml
crates/luchta-lockfiles/: Cargo.toml
crates/luchta-lockfiles/src/: lib.rs  yarn1.rs  yarn_berry.rs
crates/luchta-oxc-transform-worker/: Cargo.toml
crates/luchta-oxc-transform-worker/src/: main.rs  transform.rs
crates/luchta-oxfmt-worker/: Cargo.toml
crates/luchta-oxfmt-worker/src/: config.rs  format.rs  main.rs  opts.rs  sort_imports.rs  worker.rs
crates/luchta-oxfmt-worker/tests/: protocol.rs
crates/luchta-oxlint-worker/: Cargo.toml
crates/luchta-oxlint-worker/src/: config.rs  lint.rs  main.rs  opts.rs  sarif.rs  suppressions.rs
crates/luchta-oxlint-worker/tests/: protocol.rs
crates/luchta-swc-transform-worker/: Cargo.toml
crates/luchta-swc-transform-worker/src/: args.rs  main.rs  transform.rs
crates/luchta-types/: Cargo.toml
crates/luchta-types/src/: config.rs  lib.rs
crates/luchta-worker/: Cargo.toml
crates/luchta-worker-watcher/: Cargo.toml  README.md
crates/luchta-worker-watcher/src/: cli.rs  generation.rs  lib.rs  main.rs  router.rs  watch.rs
crates/luchta-worker-watcher/tests/: e2e.rs
crates/luchta-worker-watcher/tests/support/: mock_worker_delegate.rs
crates/luchta-worker/src/: lib.rs  parallel.rs  paths.rs  proxy.rs  runtime.rs  sarif.rs  tokenize.rs  version.rs
crates/luchta-workspace/: Cargo.toml
crates/luchta-workspace/src/: discovery.rs  lib.rs  package_graph.rs
crates/luchta-yarn-worker/: Cargo.toml
crates/luchta-yarn-worker/src/: main.rs
crates/luchta-yarn-worker/tests/: protocol.rs
patches/: tsgo.patch
scripts/: install.ps1  install.sh
xtask/: Cargo.toml
xtask/src/: main.rs
(+96 files in other folders)
