[workspace]
resolver = "2"
members = [
    "crates/luchta-types",
    "crates/luchta-lockfiles",
    "crates/luchta-workspace",
    "crates/luchta-engine",
    "crates/luchta-worker",
    "crates/luchta-cli",
    "crates/luchta-yarn-worker",
    "crates/luchta-bash-worker",
    "crates/luchta-lazy-worker",
    "crates/luchta-file-exists-filter",
    "crates/luchta-yarn-filter",
  "crates/luchta-command-filter",
    "crates/luchta-cache",
    "xtask",
]

[workspace.package]
edition = "2021"
version = "0.1.6"
license = "MIT"
authors = ["Luchta Contributors"]
rust-version = "1.78"
repository = "https://example.com/luchta"
homepage = "https://example.com/luchta"
description = "Rust monorepo build orchestration tool"

[workspace.dependencies]
petgraph = "0.6.5"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_norway = "0.9.42"
toml = "0.8.14"
thiserror = "1.0.61"
miette = { version = "7.2.0", features = ["fancy"] }
clap = { version = "4.5.7", features = ["derive"] }
globset = "0.4.14"
walkdir = "2.5.0"
blake3 = "1.5.1"
gix = { version = "0.73.0", default-features = false, features = ["dirwalk", "status", "revision", "blob-diff"] }
bincode = { version = "2.0.1", features = ["serde"] }
yarn-lock-parser = "0.11.0"
assert_cmd = "2.0.14"
assert_fs = "1.1.1"
predicates = "3.1.0"
tempfile = "3.10.1"
libc = "0.2.155"
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
sysinfo = { version = "0.36.1", default-features = false, features = ["system"] }
zstd = "0.13.2"
tar = "0.4.44"
dirs = "6.0.0"
fs2 = "0.4.3"
