[workspace]
resolver = "2"
members = [
    "crates/luchta-types",
    "crates/luchta-lockfiles",
    "crates/luchta-workspace",
    "crates/luchta-engine",
    "crates/luchta-worker",
    "crates/luchta-cli",
    "crates/luchta-yarn-worker",
    "crates/luchta-bash-worker",
    "crates/luchta-lazy-worker",
    "crates/luchta-worker-watcher",
    "crates/luchta-file-exists-filter",
    "crates/luchta-yarn-filter",
    "crates/luchta-command-filter",
    "crates/luchta-cache",
    "crates/luchta-oxlint-worker",
    "crates/luchta-oxc-transform-worker",
    "crates/luchta-swc-transform-worker",
    "crates/luchta-oxfmt-worker",
    "xtask",
]

[workspace.package]
edition = "2021"
version = "0.1.17"
license = "MIT"
authors = ["Luchta Contributors"]
# oxc main requires Rust >= 1.94.0 at pinned rev 415fe1e7bb423cf05019c5e2c9a5705eebbc5447.
rust-version = "1.94.0"
repository = "https://example.com/luchta"
homepage = "https://example.com/luchta"
description = "Rust monorepo build orchestration tool"

[workspace.dependencies]
petgraph = "0.6.5"
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3.30"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_norway = "0.9.42"
toml = "0.8.14"
thiserror = "1.0.61"
miette = { version = "7.2.0", features = ["fancy"] }
clap = { version = "4.5.7", features = ["derive"] }
globset = "0.4.14"
walkdir = "2.5.0"
blake3 = "1.5.1"
gix = { version = "0.73.0", default-features = false, features = ["dirwalk", "status", "revision", "blob-diff"] }
bincode = { version = "2.0.1", features = ["serde"] }
yarn-lock-parser = "0.11.0"
assert_cmd = "2.0.14"
assert_fs = "1.1.1"
predicates = "3.1.0"
tempfile = "3.10.1"
libc = "0.2.155"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
sysinfo = { version = "0.36.1", default-features = false, features = ["system"] }
zstd = "0.13.2"
tar = "0.4.44"
dirs = "6.0.0"
fd-lock = "4"
fs2 = "0.4.3"
ignore = "0.4.27"
notify = "6"
notify-debouncer-full = "0.3"

# oxc toolchain pinned to a single main rev 415fe1e7bb423cf05019c5e2c9a5705eebbc5447
# (see plan note open-verification-items). Requires Rust >= 1.94.
oxc_allocator = { git = "https://github.com/oxc-project/oxc.git", rev = "415fe1e7bb423cf05019c5e2c9a5705eebbc5447" }
oxc_parser = { git = "https://github.com/oxc-project/oxc.git", rev = "415fe1e7bb423cf05019c5e2c9a5705eebbc5447" }
oxc_semantic = { git = "https://github.com/oxc-project/oxc.git", rev = "415fe1e7bb423cf05019c5e2c9a5705eebbc5447" }
oxc_linter = { git = "https://github.com/oxc-project/oxc.git", rev = "415fe1e7bb423cf05019c5e2c9a5705eebbc5447" }
oxc_span = { git = "https://github.com/oxc-project/oxc.git", rev = "415fe1e7bb423cf05019c5e2c9a5705eebbc5447" }
oxc_diagnostics = { git = "https://github.com/oxc-project/oxc.git", rev = "415fe1e7bb423cf05019c5e2c9a5705eebbc5447" }
oxc_transformer = { git = "https://github.com/oxc-project/oxc.git", rev = "415fe1e7bb423cf05019c5e2c9a5705eebbc5447" }
oxc_codegen = { git = "https://github.com/oxc-project/oxc.git", rev = "415fe1e7bb423cf05019c5e2c9a5705eebbc5447" }
oxc_sourcemap = "8.0.2"
oxc_formatter = { git = "https://github.com/oxc-project/oxc.git", rev = "415fe1e7bb423cf05019c5e2c9a5705eebbc5447" }
oxc_formatter_core = { git = "https://github.com/oxc-project/oxc.git", rev = "415fe1e7bb423cf05019c5e2c9a5705eebbc5447" }
json-strip-comments = "3.1.1"
serde-sarif = "0.8.0"

# swc pinned exact — SWC breaks public API on minor bumps. See plan note a394e139 (probe).
swc_core = { version = "=73.0.0", features = ["base_module", "common", "ecma_ast", "ecma_parser"] }
