[package]
name = "luchta-ast-grep-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[[bin]]
name = "luchta-ast-grep-worker"
path = "src/main.rs"

[dependencies]
luchta-worker = { path = "../luchta-worker" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_norway = { workspace = true }
ignore = { workspace = true }
globset = { workspace = true }
indexmap = { version = "2", features = ["serde"] }
# Pinned exact: ast-grep is pre-1.0; breaks between minor versions.
ast-grep-core = "=0.43.0"
ast-grep-config = "=0.43.0"
ast-grep-language = "=0.43.0"

[dev-dependencies]
assert_cmd = { workspace = true }
assert_fs = { workspace = true }
tempfile = { workspace = true }
luchta-engine = { path = "../luchta-engine" }
serde_json = { workspace = true }
