[package]
name = "luchta-bash-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
luchta-worker = { path = "../luchta-worker" }
tokio = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
luchta-engine = { path = "../luchta-engine" }
serde_json = { workspace = true }
