[package]
name = "luchta-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[[bin]]
name = "luchta"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true }
owo-colors = "4.0"
petgraph.workspace = true
luchta-types = { path = "../luchta-types" }
luchta-workspace = { path = "../luchta-workspace" }
luchta-engine = { path = "../luchta-engine" }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
assert_fs = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
