[package]
name = "luchta-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[[bin]]
name = "luchta"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
serde_path_to_error = "0.1"
tokio = { workspace = true }
owo-colors = "4.0"
petgraph.workspace = true
globset = { workspace = true }
thiserror = { workspace = true }
sysinfo = { workspace = true }
luchta-types = { path = "../luchta-types" }
luchta-workspace = { path = "../luchta-workspace" }
luchta-engine = { path = "../luchta-engine" }
luchta-cache = { path = "../luchta-cache" }
luchta-lockfiles = { path = "../luchta-lockfiles" }
luchta-worker = { path = "../luchta-worker" }
blake3 = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
assert_fs = { workspace = true }
escargot = "0.5"
predicates = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
