[package]
name = "luchta-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[[bin]]
name = "luchta"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
fd-lock = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
serde-sarif = "0.8"
serde_path_to_error = "0.1"
tokio = { workspace = true }
ignore = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
tokio-util = { workspace = true }
owo-colors = { version = "4.0", features = ["supports-colors"] }
jiff = "0.2.28"
petgraph.workspace = true
globset = { workspace = true }
thiserror = { workspace = true }
gix = { workspace = true }
sysinfo = { workspace = true }
percent-encoding = "2.3.2"
luchta-types = { path = "../luchta-types" }
luchta-workspace = { path = "../luchta-workspace" }
luchta-engine = { path = "../luchta-engine" }
luchta-cache = { path = "../luchta-cache" }
luchta-lockfiles = { path = "../luchta-lockfiles" }
luchta-worker = { path = "../luchta-worker" }
blake3 = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
assert_fs = { workspace = true }
escargot = "0.5"
predicates = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
