[package]
name = "luchta-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
petgraph = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
libc = { workspace = true }
luchta-types = { path = "../luchta-types" }
luchta-worker = { path = "../luchta-worker" }
luchta-workspace = { path = "../luchta-workspace" }
luchta-cache = { path = "../luchta-cache" }

[dev-dependencies]
tempfile = { workspace = true }
