[package]
name = "luchta-extra-resolve-worker"
version.workspace = true
edition.workspace = true

[[bin]]
name = "luchta-extra-resolve-worker"
path = "src/main.rs"

[dependencies]
luchta-worker = { path = "../luchta-worker" }
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
serde_json.workspace = true
tempfile.workspace = true
