[package]
name = "luchta-file-exists-filter"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
luchta-worker = { path = "../luchta-worker" }
tokio = { workspace = true }
globset = { workspace = true }
walkdir = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
