[package]
name = "luchta-lockfiles"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
thiserror = { workspace = true }
yarn-lock-parser = { workspace = true }
