[package]
name = "luchta-swc-transform-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[features]
default = ["swc"]
swc = ["dep:swc_core"]

[dependencies]
luchta-worker = { path = "../luchta-worker" }
serde_json = { workspace = true }
tokio = { workspace = true }
swc_core = { workspace = true, optional = true, features = ["base_react_compiler"] }

[dev-dependencies]
assert_fs = { workspace = true }
tempfile = { workspace = true }
