[package]
name = "luchta-workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
petgraph = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
globset = { workspace = true }
walkdir = { workspace = true }
luchta-types = { path = "../luchta-types" }

[dev-dependencies]
tempfile = { workspace = true }
